fix: z-index for navy

--- a/src/blocks/header/__navi/header__navi.css
+++ b/src/blocks/header/__navi/header__navi.css
@@ -3,6 +3,7 @@
   position: absolute;
   top: 44px;
   left: 0;
+  z-index: 1;
   flex-direction: column;
   width: 320px;
   background-color: #000D26;
